--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
     <title>Klausbdl - Index</title>
@@ -22,7 +22,7 @@
     <footer id="footer">
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
